# ML_FORMATION

./: .gitignore  Copie_de_TP_de_Churn_Prediction.ipynb  Dockerfile  LLM_Fine_tuning_Mistral_7B_WritingPrompts_DL.ipynb  MLOPS_TP_BERT.ipynb  README.md  app.py  pyproject.toml  train.py
.github/workflows/: ci-cd.yml
data/: churn_model.pkl  train_data.csv
templates/: index.html
tests/: conftest.py  test_app.py  test_train.py
