[project]
name = "ml_formation"
version = "0.1.0"
description = "Projet de formation en machine learning"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "flask>=3.0.0",
    "ruff>=0.11.0",
    "pytest>=8.3.5",
    "prometheus-client>=0.21.1",
]

[dependency-groups]
dev = [
    "requests>=2.32.3",
    "ruff>=0.11.0",
]
